--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.yelwinoo">
+    package="com.example.mustkeem">
    <application
-        android:label="yelwinoo"
+        android:label="mustkeem"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
