--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "yelwinoo",
-    "short_name": "yelwinoo",
+    "name": "mustkeem",
+    "short_name": "mustkeem",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
